--- a/index.html
+++ b/index.html
@@ -5,60 +5,83 @@
   <title>Christopher Nott – Cybersecurity & AI Strategy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      font-size: 17px;
-      line-height: 1.65;
-      color: #1e1e1e;
-      background: #ffffff;
-      max-width: 960px;
-      margin: 5rem auto;
-      padding: 0 2rem;
-    }
+ body {
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  line-height: 1.75;
+  color: #202124;
+  background: #ffffff;
+  max-width: 720px;
+  margin: 4rem auto;
+  padding: 0 1.5rem;
+}
 
-    h1 {
-      font-size: 2.75rem;
-      margin-bottom: 1rem;
-      font-weight: 600;
-    }
+h1 {
+  font-size: 2.75rem;
+  margin-bottom: 1.2rem;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+}
 
-    h2 {
-      font-size: 1.5rem;
-      margin-top: 3rem;
-      margin-bottom: 1rem;
-      font-weight: 600;
-    }
+h2 {
+  font-size: 1.5rem;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
+}
 
-    p {
-      margin-bottom: 1.5rem;
-    }
+nav {
+  margin-bottom: 3rem;
+  text-align: left;
+  font-size: 1rem;
+}
 
-    ul {
-      padding-left: 1.5rem;
-      margin-bottom: 1.5rem;
-    }
+nav a {
+  margin-right: 1.75rem;
+  font-weight: 600;
+  color: #1a73e8;
+  text-decoration: none;
+  border-bottom: 2px solid transparent;
+  transition: border-color 0.2s;
+}
 
-    a {
-      color: #0047ab;
-      text-decoration: none;
-      border-bottom: 1px solid #0047ab;
-    }
+nav a:hover {
+  border-bottom: 2px solid #1a73e8;
+}
 
-    a:hover {
-      color: #000000;
-      border-bottom-color: #000000;
-    }
+p {
+  margin-bottom: 1.75rem;
+}
 
-    nav {
-      margin-bottom: 3rem;
-    }
+ul {
+  padding-left: 1.5rem;
+  margin-bottom: 2rem;
+}
 
-    nav a {
-      margin-right: 2rem;
-      font-weight: 600;
-    }
-  </style>
+a {
+  color: #1a73e8;
+  text-decoration: none;
+  border-bottom: 1px solid #1a73e8;
+}
+
+a:hover {
+  color: #0b408a;
+  border-bottom-color: #0b408a;
+}
+
+hr {
+  margin: 3rem 0;
+  border: none;
+  border-top: 1px solid #e0e0e0;
+}
+
+footer {
+  margin-top: 4rem;
+  font-size: 0.9rem;
+  color: #888;
+  text-align: center;
+}
+
 </head>
 <body>
 
