--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Christopher Nott – Cybersecurity & AI Strategy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
- body {
+ <style>
+  body {
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   line-height: 1.75;
@@ -81,7 +82,7 @@ footer {
   color: #888;
   text-align: center;
 }
-
+</style>
 </head>
 <body>
 
