--- a/index.html
+++ b/index.html
@@ -85,29 +85,51 @@ footer {
 </style>
 </head>
 <body>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="research.html">Research</a>
+  <a href="insights.html">Insights</a>
+  <a href="articles.html">Articles</a>
+</nav>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#">About</a>
-    <a href="#">Research</a>
-    <a href="#">Insights</a>
-    <a href="#">Articles</a>
-  </nav>
+<h1>Christopher Nott</h1>
+<p>Cybersecurity Strategy & Artificial Intelligence Leadership</p>
 
-  <h1>Cybersecurity & AI Strategy</h1>
+<hr>
 
-  <p>Strategic leadership at the intersection of cyber defense, emerging threats, and AI integration. I design and deliver operational capabilities that align with executive priorities and withstand real-world complexity.</p>
+<p>
+  I lead complex cybersecurity and AI-driven transformation efforts across government and enterprise environments. With a deep background in cyber threat intelligence, digital forensics, and AI readiness, I help organizations architect secure, adaptive, and forward-thinking operations.
+</p>
 
-  <h2>Core Capabilities</h2>
-  <ul>
-    <li>Cybersecurity strategy & architecture</li>
-    <li>Threat intelligence and digital forensics</li>
-    <li>AI governance and explainability</li>
-    <li>Mission-aligned procurement and implementation</li>
-    <li>Executive-level advisory and risk planning</li>
-  </ul>
+<p>
+  My work operates at the intersection of mission-critical need and emergent technology. I build systems and teams that scale—without compromising on clarity, accountability, or technical rigor.
+</p>
 
-  <p>To connect, email <a href="mailto:cn.research@outlook.com">cn.research@outlook.com</a> or find me on <a href="https://linkedin.com/in/cnott">LinkedIn</a>.</p>
+<h2>Current Focus</h2>
+<ul>
+  <li>Cyber threat intelligence strategy and counterintelligence integration</li>
+  <li>AI-enabled risk modeling and adversarial resilience</li>
+  <li>Executive advisory on secure digital transformation</li>
+  <li>Research on cognitive integrity in AI decision support systems</li>
+</ul>
 
+<h2>Recent Work</h2>
+<ul>
+  <li><strong>Whitepaper:</strong> <em>Generative AI in the Cyber Kill Chain</em></li>
+  <li><strong>Case Study:</strong> Adversarial AI threats in public-sector procurement</li>
+  <li><strong>LinkedIn Article:</strong> <a href="https://linkedin.com/in/cnott" target="_blank">Cyber Strategy in a Fragmented AI World</a></li>
+</ul>
+
+<h2>Contact</h2>
+<p>
+  <a href="mailto:cn.research@outlook.com">cn.research@outlook.com</a> · 
+  <a href="https://linkedin.com/in/cnott" target="_blank">LinkedIn</a> · 
+  <a href="https://github.com/cyberdoc88" target="_blank">GitHub</a>
+</p>
+
+<footer>
+  &copy; 2025 Christopher Nott. All rights reserved.
+</footer>
 </body>
 </html>
