--- a/index.html
+++ b/index.html
@@ -5,131 +5,108 @@
   <title>Christopher Nott – Cybersecurity & AI Strategy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
- <style>
-  body {
-  font-family: 'Inter', sans-serif;
-  font-size: 18px;
-  line-height: 1.75;
-  color: #202124;
-  background: #ffffff;
-  max-width: 720px;
-  margin: 4rem auto;
-  padding: 0 1.5rem;
-}
 
-h1 {
-  font-size: 2.75rem;
-  margin-bottom: 1.2rem;
-  font-weight: 600;
-  letter-spacing: -0.5px;
-}
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      color: #202124;
+      background: #ffffff;
+      max-width: 760px;
+      margin: 5rem auto 2rem;
+      line-height: 1.6;
+      padding: 0 1rem;
+    }
 
-h2 {
-  font-size: 1.5rem;
-  margin-top: 3rem;
-  margin-bottom: 1rem;
-  font-weight: 600;
-}
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      margin-bottom: 3rem;
+      font-weight: 600;
+    }
+    nav a {
+      color: #1a73e8;
+      text-decoration: none;
+      border-bottom: 2px solid transparent;
+      transition: border-color 0.2s;
+    }
+    nav a:hover {
+      border-bottom-color: currentColor;
+    }
 
-nav {
-  margin-bottom: 3rem;
-  text-align: left;
-  font-size: 1rem;
-}
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      text-align: center;
+    }
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 3rem;
+      margin-bottom: 0.75rem;
+    }
 
-nav a {
-  margin-right: 1.75rem;
-  font-weight: 600;
-  color: #1a73e8;
-  text-decoration: none;
-  border-bottom: 2px solid transparent;
-  transition: border-color 0.2s;
-}
+    p {
+      margin-bottom: 1.5rem;
+    }
+    ul {
+      margin: 1rem 0 1.5rem 1.25rem;
+    }
+    footer {
+      margin-top: 4rem;
+      font-size: 0.9rem;
+      color: #666;
+      text-align: center;
+      border-top: 1px solid #eee;
+      padding-top: 1rem;
+    }
+  </style>
 
-nav a:hover {
-  border-bottom: 2px solid #1a73e8;
-}
-
-p {
-  margin-bottom: 1.75rem;
-}
-
-ul {
-  padding-left: 1.5rem;
-  margin-bottom: 2rem;
-}
-
-a {
-  color: #1a73e8;
-  text-decoration: none;
-  border-bottom: 1px solid #1a73e8;
-}
-
-a:hover {
-  color: #0b408a;
-  border-bottom-color: #0b408a;
-}
-
-hr {
-  margin: 3rem 0;
-  border: none;
-  border-top: 1px solid #e0e0e0;
-}
-
-footer {
-  margin-top: 4rem;
-  font-size: 0.9rem;
-  color: #888;
-  text-align: center;
-}
-</style>
 </head>
 <body>
-<nav>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="research.html">Research</a>
-  <a href="insights.html">Insights</a>
-  <a href="articles.html">Articles</a>
-</nav>
 
-<h1>Christopher Nott</h1>
-<p>Cybersecurity Strategy & Artificial Intelligence Leadership</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="research.html">Research</a>
+    <a href="insights.html">Insights</a>
+    <a href="articles.html">Articles</a>
+  </nav>
 
-<hr>
+  <h1>Christopher Nott</h1>
+  <p style="text-align: center; font-size: 1.2rem; font-weight: 500;">
+    Cybersecurity Strategy • AI Leadership • Executive Advisor
+  </p>
 
-<p>
-  I lead complex cybersecurity and AI-driven transformation efforts across government and enterprise environments. With a deep background in cyber threat intelligence, digital forensics, and AI readiness, I help organizations architect secure, adaptive, and forward-thinking operations.
-</p>
+  <hr>
 
-<p>
-  My work operates at the intersection of mission-critical need and emergent technology. I build systems and teams that scale—without compromising on clarity, accountability, or technical rigor.
-</p>
+  <p>I design and deliver cybersecurity capabilities powered by advanced AI—deploying mission-grade systems at scale for C‑Suite, federal, and enterprise clients. With 20+ years in threat intelligence, digital forensics, and secure AI adoption, I enable resilient solutions that anticipate tomorrow’s challenges today.</p>
 
-<h2>Current Focus</h2>
-<ul>
-  <li>Cyber threat intelligence strategy and counterintelligence integration</li>
-  <li>AI-enabled risk modeling and adversarial resilience</li>
-  <li>Executive advisory on secure digital transformation</li>
-  <li>Research on cognitive integrity in AI decision support systems</li>
-</ul>
+  <h2>Core Capabilities</h2>
+  <ul>
+    <li>Zero-to-One Cybersecurity Architecture & Delivery</li>
+    <li>Threat Intelligence & Counterintelligence Programs</li>
+    <li>Explainable AI Risk Modeling & Governance</li>
+    <li>Executive-Level Advisory & Technology Strategy</li>
+    <li>Mission-Aligned Procurement & Operational Implementation</li>
+  </ul>
 
-<h2>Recent Work</h2>
-<ul>
-  <li><strong>Whitepaper:</strong> <em>Generative AI in the Cyber Kill Chain</em></li>
-  <li><strong>Case Study:</strong> Adversarial AI threats in public-sector procurement</li>
-  <li><strong>LinkedIn Article:</strong> <a href="https://linkedin.com/in/cnott" target="_blank">Cyber Strategy in a Fragmented AI World</a></li>
-</ul>
+  <h2>Recent Work</h2>
+  <ul>
+    <li><strong>Whitepaper:</strong> Generative AI in the Cyber Kill Chain</li>
+    <li><strong>Case Study:</strong> Adversarial AI in Public-Sector Procurement</li>
+    <li><strong>Article:</strong> <a href="https://linkedin.com/in/cnott" target="_blank">Cyber Strategy in a Fragmented AI World</a></li>
+  </ul>
 
-<h2>Contact</h2>
-<p>
-  <a href="mailto:cn.research@outlook.com">cn.research@outlook.com</a> · 
-  <a href="https://linkedin.com/in/cnott" target="_blank">LinkedIn</a> · 
-  <a href="https://github.com/cyberdoc88" target="_blank">GitHub</a>
-</p>
+  <h2>Connect</h2>
+  <p>
+    <a href="mailto:cn.research@outlook.com">cn.research@outlook.com</a> · 
+    <a href="https://linkedin.com/in/cnott" target="_blank">LinkedIn</a> · 
+    <a href="https://github.com/cyberdoc88" target="_blank">GitHub</a>
+  </p>
 
-<footer>
-  &copy; 2025 Christopher Nott. All rights reserved.
-</footer>
+  <footer>
+    &copy; 2025 Christopher Nott. All rights reserved.
+  </footer>
+
 </body>
 </html>
