--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <a href="#home" class="logo">Dr. [Your Name]</a>
+            <a href="#home" class="logo">Christopher Nott</a>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#articles">Articles</a></li>
@@ -620,8 +620,8 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <div class="hero-badge">🎓 Doctoral Candidate in Cybersecurity</div>
-                <h1 class="hero-title">Cybersecurity Expert, AI Strategist & Scholar</h1>
+                <!-- <div class="hero-badge">🎓 Doctoral Candidate in Cybersecurity</div> -->
+                <h1 class="hero-title">Cybersecurity Leader | AI & Cyber Strategist | Strategy-to-Execution Architect </h1>
                 <p class="hero-subtitle">Advancing the intersection of artificial intelligence and cybersecurity through research, strategy, and workforce development.</p>
                 <p class="hero-description">
                     Bridging academic rigor with real-world application, I specialize in AI-driven threat detection, strategic cybersecurity consulting, and developing the next generation of cybersecurity professionals through innovative workforce readiness programs.
