--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. [Your Name] | Cybersecurity Expert, AI Strategist & Scholar</title>
+    <title>Christopher Nott | Cybersecurity Expert, AI Strategist & Scholar</title>
     <meta name="description" content="Leading cybersecurity expert, AI strategist, and scholar specializing in the intersection of artificial intelligence and cybersecurity. Doctoral research in advanced threat detection and strategic consulting.">
     <style>
         * {
