--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christopher Nott | Cybersecurity Expert, AI Strategist & Scholar</title>
+    <title>Christopher Nott | Leader, Strategist, & Educator</title>
     <meta name="description" content="Leading cybersecurity expert, AI strategist, and scholar specializing in the intersection of artificial intelligence and cybersecurity. Doctoral research in advanced threat detection and strategic consulting.">
     <style>
         * {
@@ -621,7 +621,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <!-- <div class="hero-badge">🎓 Doctoral Candidate in Cybersecurity</div> -->
-                <h1 class="hero-title">Cybersecurity Leader</h1>br>AI & Cyber Strategist</br>Strategy-to-Execution Architect</br>Educator </h1>
+                <h1 class="hero-title">Cybersecurity Leader</br>AI & Cyber Strategist</br>Strategy-to-Execution Architect</br>Educator </h1>
                 <p class="hero-subtitle">Advancing the intersection of artificial intelligence and cybersecurity through research, strategy, and workforce development.</p>
                 <p class="hero-description">
                     Bridging academic rigor with real-world application, I specialize in AI-driven threat detection, strategic cybersecurity consulting, and developing the next generation of cybersecurity professionals through innovative workforce readiness programs.
