--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <!-- <div class="hero-badge">🎓 Doctoral Candidate in Cybersecurity</div> -->
-                <h1 class="hero-title" style ="font-size: 2.0rem;">Cybersecurity Leader</br>AI & Cyber Strategist</br>Strategy-to-Execution Architect</br>Educator </h1>
+                <h1 class="hero-title" style ="font-size: 2.2rem;">Cybersecurity Leader</br>AI & Cyber Strategist</br>Strategy-to-Execution Architect</br>Educator </h1>
                 <p class="hero-subtitle">Advancing the intersection of artificial intelligence and cybersecurity through research, strategy, and workforce development.</p>
                 <p class="hero-description">
                     Bridging academic rigor with real-world application, I specialize in AI-driven threat detection, strategic cybersecurity consulting, and developing the next generation of cybersecurity professionals through innovative workforce readiness programs.
@@ -633,14 +633,13 @@
             </div>
             <div class="hero-image">
                 <div class="profile-placeholder">
-                    [Your Initial]
+                    CN
                 </div>
                 <div class="credentials">
                     <strong>Cybersecurity Expert</strong><br>
                     AI Strategist & Scholar<br>
-                    Doctoral Candidate<br>
                     Strategic Consultant<br>
-                    Workforce Development Educator
+                    Educator
                 </div>
             </div>
         </div>
