--- a/index.html
+++ b/index.html
@@ -780,8 +780,8 @@
                 Available for strategic consulting, research collaboration, speaking engagements, and academic partnerships.
             </p>
             <div class="contact-buttons">
-                <a href="mailto:your.email@university.edu" class="btn-white">Email Me</a>
-                <a href="https://linkedin.com/in/yourprofile" class="btn-white">LinkedIn</a>
+                <a href="mailto:c.n.research@outlook.com" class="btn-white">Email Me</a>
+                <a href="https://linkedin.com/in/cnott" class="btn-white">LinkedIn</a>
             </div>
         </div>
     </section>
