--- a/index.html
+++ b/index.html
@@ -793,10 +793,9 @@
                 <p>&copy; 2025 Christopher Nott. All rights reserved.</p>
             </div>
             <div class="social-links">
-                <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
-                <a href="https://twitter.com/yourhandle">Twitter</a>
-                <a href="https://scholar.google.com/yourprofile">Google Scholar</a>
-                <a href="https://orcid.org/yourorcid">ORCID</a>
+                <a href="https://linkedin.com/in/cnott">LinkedIn</a>
+ <!--               <a href="https://scholar.google.com/yourprofile">Google Scholar</a> -->
+                <a href="https://orcid.org/0009-0006-7406-0729">ORCID</a>
             </div>
         </div>
     </footer>
